Remove bitcoin storage page and update navigation

--- a/home.html
+++ b/home.html
@@ -727,9 +727,9 @@
               <a href="btc-loan-ltv">🔒 BTC Loans</a>
               <a href="financial-planner">📋 Financial Planner</a>
               <a href="bitcoin-security">🛡️ Bitcoin Security</a>
-              <a href="bitcoin-storage">🏛️ Bitcoin Storage</a>
               <a href="pleb-release">📰 Pleb Release</a>
               <a href="interest-arbitrage-calculator">💹 Yield Arbitrage</a>
+              <a href="step-by-step-to-self-custody">🔑 Self Custody Guide</a>
               <a href="invoice-builder">🧾 Invoice Builder</a>
             </div>
           </div>
@@ -805,6 +805,26 @@
             Compare Bitcoin growth against house appreciation and traditional investments.
           </p>
           <a href="compound-interest-calculator" class="feature-btn">View Calculator</a>
+        </div>
+
+        <div class="feature-card">
+          <span class="feature-icon">💹</span>
+          <h3 class="feature-title">Yield Arbitrage Calculator</h3>
+          <p class="feature-description">
+            Model debt-funded yield strategies with side-by-side projections. Stress test spreads,
+            servicing plans, and reinvestment assumptions before deploying capital.
+          </p>
+          <a href="interest-arbitrage-calculator" class="feature-btn">Explore Yield Arbitrage</a>
+        </div>
+
+        <div class="feature-card">
+          <span class="feature-icon">🔑</span>
+          <h3 class="feature-title">Self-Custody Step-by-Step Guide</h3>
+          <p class="feature-description">
+            Follow an interactive, quiz-gated process that takes you from buying Bitcoin to secure cold
+            storage with rehearsed recovery and hardened backups.
+          </p>
+          <a href="step-by-step-to-self-custody" class="feature-btn">Start the Self-Custody Guide</a>
         </div>
 
         <div class="feature-card">
