--- a/compound-interest-calculator.html
+++ b/compound-interest-calculator.html
@@ -532,8 +532,8 @@
               <a href="financial-planner">📋 Financial Planner</a>
               <a href="bitcoin-security">🛡️ Bitcoin Security</a>
               <a href="interest-arbitrage-calculator">💹 Yield Arbitrage</a>
+              <a href="step-by-step-to-self-custody">🔑 Self Custody Guide</a>
               <a href="invoice-builder">🧾 Invoice Builder</a>
-              <a href="bitcoin-storage">🏛️ Bitcoin Storage</a>
               <a href="pleb-release">📰 Pleb Release</a>
                     </div>
                 </div>
